rewrote in polymer, got working with web components, ready for data stores soon

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "core-icons": "Polymer/core-icons#~0.5.1",
     "core-toolbar": "Polymer/core-toolbar#~0.5.1",
-    "paper-tabs": "Polymer/paper-tabs#~0.5.1"
+    "paper-tabs": "Polymer/paper-tabs#~0.5.1",
+    "core-elements": "Polymer/core-elements#~0.5.1",
+    "core-media-query": "Polymer/core-media-query#~0.5.1"
   }
 }
