got the sliding stuff working

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "core-toolbar": "Polymer/core-toolbar#~0.5.1",
     "paper-tabs": "Polymer/paper-tabs#~0.5.1",
     "core-elements": "Polymer/core-elements#~0.5.1",
-    "core-media-query": "Polymer/core-media-query#~0.5.1"
+    "core-media-query": "Polymer/core-media-query#~0.5.1",
+    "juicy-tile-list": "~0.0.7"
   }
 }
